# my_data_standard_management_idea

./: .gitignore  PRD-step2.md  PRD.md  README.md  init_system.py  main.py  pyproject.toml  requirements.txt
app/: config.py  db.py  errors.py  exception_handlers.py  main.py  models.py  schemas.py  validators.py
app/routers/: categories.py  code_lists.py  embeddings.py  relations.py  search.py  standards.py
app/services/: code_lists.py  embedding.py  search.py  standards.py
docs/: API使用说明.md  工作计划-step2.md  待确认问题.md
mcp_server/: README.md  __init__.py  config.py  config.toml  http_client.py  implementation_plan.md.resolved  pyproject.toml  requirements.txt  server.py
mcp_server/tools/: __init__.py  categories.py  code_lists.py  relations.py  search.py  standards.py
scripts/: api_codelist_test.py  api_readonly_ui_test.py  api_smoke_test.py  api_validation_test.py  api_workflow_test.py  init_db.py  rebuild_all_embeddings.py  run_api_tests.py  seed_demo_standards.py
sql/: init_schema.sql  migrate_v3_api_validation.sql
ui-readonly/: app.js  index.html  styles.css
